# FAST_API_RAG_APP

./: .env.example  .gitignore  README.md  lambda_handler.py  pyproject.toml
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/api/: deps.py
app/api/v1/: chat.py  health.py  ingestion.py  router.py
app/core/: guardrails.py  logging.py  middleware.py  rbac.py  security.py
app/integrations/: s3_client.py  secrets_manager.py  webhook_client.py
app/repositories/: cache_store.py  conversation_store.py  metadata_store.py  vector_store.py
app/schemas/: auth.py  chat.py  common.py  ingestion.py
app/services/: chat_service.py  chunker.py  embedder.py  indexer.py  ingestion_service.py  llm_client.py  parser.py  prompt_builder.py  retriever.py  semantic_cache.py
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
